--- a/src/app/portal/portal/portal.component.html
+++ b/src/app/portal/portal/portal.component.html
@@ -8,7 +8,7 @@
 <header>
 <div class="left">
     <h1>Seja bem-vindo a <span>ProtecFree</span></h1>
-    <p>Faça parte de uma comunidade que se preocupa com você. Junte-se à nossa plataforma,
+    <p>Faça parte de uma comunidade que se preocupa com você. Junte-se à nossa plataforma onde
         freelancers e empresas podem trabalhar juntos com tranquilidade
     </p>
         <div class="butti">
@@ -55,21 +55,5 @@
 </div>
 
 
-<footer>
-    <div class="right">
-        <div class="links">
-           
-            <a href="#">Inicio</a>
-            <a href="#">Sobre</a>
-            <a href="#">Contacte-nos</a>
-            <a href="#">Privacy Policy</a>
-        </div>
-        <div class="social">
-            <i class='bx bxl-instagram'></i>
-            <i class='bx bxl-facebook-square'></i>
-        </div>
-        <p>Copyright © 2024 Mauricio Domingos, Todos Direitos Reservados.</p>
-    </div>
-</footer> 
 
-
+<app-footer></app-footer>
