--- a/src/app/mainpage/freeoffice/freeoffice.component.css
+++ b/src/app/mainpage/freeoffice/freeoffice.component.css
@@ -33,135 +33,6 @@ body{
     overflow-x: hidden;
 }
 
-.sidebar{
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: var(--light);
-    width: 230px;
-    height: 100%;
-    z-index: 2000;
-    overflow-x: hidden;
-    scrollbar-width: none;
-    transition: all 0.3s ease;  
-}
-
-.sidebar::-webkit-scrollbar{
-    display: none;
-}
-
-.sidebar.close{
-    width: 60px;
-}
-
-.sidebar .logo{
-    font-size: 24px;
-    font-weight: 700;
-    height: 56px;
-    display: flex;
-    align-items: center;
-    color: var(--primary);
-    z-index: 500;
-    padding-bottom: 20px;
-    box-sizing: content-box;
-}
-
-
-
-.sidebar .logo .bx{
-    min-width: 30px;
-    display: flex;
-    justify-content: center;
-    font-size: 1.4rem;
-    margin-left: 10px;
-    color: #fff;
-    background-color: var(--primary);
-    border-radius: var(--border-radius-1);
-}
-.sidebar .logo .logo-name{
-    margin-left: 19px;
-}
-
-.sidebar .side-menu{
-    width: 100%;
-    margin-top: 36px;
-   
-}
-
-.sidebar .side-menu li{
-    height: 48px;
-    background: transparent;
-    margin-left: 6px;
-    border-radius: 48px 0 0 48px;
-    padding: 4px;
-}
-
-.sidebar .side-menu li.active{
-    background: var(--grey);
-    position: relative;
-}
-
-.sidebar .side-menu li.active::before{
-    content: "";
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    top: -40px;
-    right: 0;
-    box-shadow: 20px 20px 0 var(--grey);
-    z-index: -1;
-}
-
-.sidebar .side-menu li.active::after{
-    content: "";
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    bottom: -40px;
-    right: 0;
-    box-shadow: 20px -20px 0 var(--grey);
-    z-index: -1;
-}
-
-.sidebar .side-menu li a{
-    width: 100%;
-    height: 100%;
-    background: var(--light);
-    display: flex;
-    align-items: center;
-    border-radius: 48px;
-    font-size: 16px;
-    color: var(--dark);
-    white-space: nowrap;
-    overflow-x: hidden;
-    transition: all 0.3s ease;
-}
-
-.sidebar .side-menu li.active a{
-    color: var(--primary);
-}
-
-.sidebar.close .side-menu li a{
-    width: calc(48px - (4px * 2));
-    transition: all 0.3s ease;
-}
-
-.sidebar .side-menu li a .bx{
-    min-width: calc(60px - ((4px + 6px) * 2));
-    display: flex;
-    font-size: 1.6rem;
-    justify-content: center;
-}
-
-.sidebar .side-menu li a.logout{
-    color: var(--danger);
-}
-.sidebar .side-menu li a:hover{
-    color: var(--primary);
-    margin-left: 0.6rem;
-}
 
 .content{
     position: relative;
@@ -170,138 +41,7 @@ body{
     transition: all 0.3s ease;
 }
 
-.sidebar.close~.content{
-    width: calc(100% - 60px);
-    left: 60px;
-}
 
-.content nav{
-    height: 56px;
-    background: var(--light);
-    /* border-bottom:1px solid #ccc; */
-    padding: 0 24px 0 0;
-    display: flex;
-    align-items: center;
-    grid-gap: 24px;
-    position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-}
-
-.content nav::before{
-    content: "";
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    bottom: -40px;
-    left: 0;
-    border-radius: 50%;
-    box-shadow: -20px -20px 0 var(--light);
-}
-
-.content nav a{
-    color: var(--dark);
-}
-
-.content nav .bx.bx-menu{
-    cursor: pointer;
-    color: var(--dark);
-}
-
-.content nav form{
-    max-width: 400px;
-    width: 100%;
-    margin-right: auto;
-}
-
-.content nav form .form-input{
-    display: flex;
-    align-items: center;
-    height: 36px;
-}
-
-.content nav form .form-input input{
-    flex-grow: 1;
-    padding: 0 16px;
-    height: 100%;
-    border: none;
-    background: var(--grey);
-    border-radius: 5px 0 0 5px;
-    outline: none;
-    width: 100%;
-    color: var(--dark);
-}
-
-.content nav form .form-input button{
-    width: 80px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--light);
-    color: var(--primary);
-    font-size: 18px;
-  border:1px solid rgba(0,0,0,.1) ;
-    outline: none;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-}
-
-.content nav .notif{
-    font-size: 20px;
-    position: relative;
-}
-
-.content nav .notif .count{
-    position: absolute;
-    top: -6px;
-    right: -6px;
-    width: 20px;
-    height: 20px;
-    background: var(--danger);
-    border-radius: 50%;
-    color: var(--light);
-    border: 2px solid var(--light);
-    font-weight: 700;
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.content nav .profile img{
-    width: 36px;
-    height: 36px;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
-.content nav .theme-toggle{
-    display: block;
-    min-width: 50px;
-    height: 25px;
-    background: var(--grey);
-    cursor: pointer;
-    position: relative;
-    border-radius: 25px;
-}
-
-.content nav .theme-toggle::before{
-    content: "";
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    bottom: 2px;
-    width: calc(25px - 4px);
-    background: var(--primary);
-    border-radius: 50%;
-    transition: all 0.3s ease;
-}
-
-.content nav #theme-toggle:checked+.theme-toggle::before{
-    left: calc(100% - (25px - 4px) - 2px);
-}
 
 /* -------------------------------------------------------------------------- */
 .content main{
@@ -311,435 +51,14 @@ body{
     margin-top: -20px;
 }
 
-.content main .header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    grid-gap: 16px;
-    flex-wrap: wrap;
-}
-.content main .searchResponse{
-    margin-bottom: -11px;
-    /* display: none; */
-    display: flex;
-    flex-direction: row;
-    padding: 2px;
-   
-}
-.content main .searchResponse i{
-    font-size: 12pt;
-    color: var(--danger);
-    margin-right: 5px;
-}
 
-
-.content main .header .left h1{
-    font-size: 36px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    color: var(--dark);
-}
-
-.content main .header .left .breadcrumb{
-    display: flex;
-    align-items: center;
-    grid-gap: 16px;
-}
-
-.content main .header .left .breadcrumb li{
-    color: var(--dark);
-}
-
-.content main .header .left .breadcrumb li a{
-    color: var(--primary);
-    pointer-events: none;
-}
-
-.content main .header .left .breadcrumb li a.active{
-    color: var(--primary);
-    pointer-events: none;
-}
-
-.content main .header .report{
-    height: 36px;
-    padding: 0 16px;
-    border-radius: 36px;
-    background: var(--primary);
-    color: var(--light);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-gap: 10px;
-    font-weight: 500;
-}
-
-.content main .insights{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    grid-gap: 24px;
-    margin-top: 25px;
-}
-/* ---------------Public Service----------------- */
-
-
-.content main .insights form .form-group textarea{
-    width: 100%;
-    border-radius: var(--border-radius-1);
-    border:1px solid #ccc;
-    outline: none;
-    padding-top: 10px;
-    padding-left:15px; 
-  
-}
-.content main .insights form .form-group textarea:focus,
-.content main .insights form .form-group textarea:valid{
-    border-color: var(--dark-grey);
-    border-bottom-width:2px;
-    transition: all 0.3s ease;
-}
-
-.content main .insights form .form-group select{
-    outline: none;
-    background-color: var(--light);
-    border-radius: 5px;
-    padding: 4px;
-    border:1px solid #ccc;
-    cursor: pointer;
-    font-size: 9pt;
-}
-.content main .insights form .form-group input{
-    background-color: var(--primary);
-    border-radius: 5px;
-    color: #fff;
-    padding: 6px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    font-size: 8pt;
-  width: 21%;
-}
-.content main .insights form .form-group input:hover{
-    background-color: var(--color-hover);
-}
- /* ---------------End Edition Public-------------- */
- .content main .insights .infoGroup{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    grid-gap: 24px;
-    width: 100%;
- }
-
-.content main .insights .aditionalInfo{
-    padding: 24px;
-    background: var(--light);
-    border:1px solid #ccc;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    grid-gap: 24px;
-    cursor: pointer;
-    width: 100%;
-}
-
-.content main .insights div .bx{
-    width: 80px;
-    height: 80px;
-    border-radius: 5px;
-    font-size: 36px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.content main .insights div:nth-child(1) .bx{
-    background: #64b1ff;
-    color: var(--primary);
-}
-
-.content main .insights div:nth-child(2) .bx{
-    background: #64b1ff;
-    color: var(--primary);
-}
-
-.content main .insights div:nth-child(3) .bx{
-    background: #64b1ff;
-    color: var(--primary);
-}
-
-.content main .insights div:nth-child(4) .bx{
-    background: var(--light-danger);
-    color: var(--danger);
-}
-
-.content main .insights div .info h3{
-    font-size: 24px;
-    font-weight: 600;
-    color: var(--dark);
-}
-
-.content main .insights div .info p{
-    color: var(--dark);
-}
- /* Users Edition */
-.content main .new-users{
-    margin-top: 1.3rem;
-}
-
-.content main .new-users .user-list{
-    background-color: var(--light);
-    padding: var(--card-padding);
-    border-radius: var(--card-border-radius);
-    border:1px solid #ccc;
-    /* margin-top: 1rem; */
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 1.4rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.content main .new-users .user-list .user{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.content main .new-users .user-list .user img{
-    width: 5rem;
-    height: 5rem;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-bottom: 0.4rem;
-}
-
-
-
-
-
-
-
-
-.content main .bottom-data{
-    display: flex;
-    flex-wrap: wrap;
-    grid-gap: 24px;
-    margin-top: 24px;
-    width: 100%;
-    color: var(--dark);
-}
-
-.content main .bottom-data>div{
-    border-radius: 5px;
-    background: var(--light);
-    padding: 24px;
-    overflow-x: auto;
-}
-
-.content main .bottom-data .header{
-    display: flex;
-    align-items: center;
-    grid-gap: 16px;
-    margin-bottom: 24px;
-}
-
-.content main .bottom-data .header h3{
-    margin-right: auto;
-    font-size: 14px;
-    font-weight: 600;
-}
-
-.content main .bottom-data .header .bx{
-    cursor: pointer;
-}
-
-.content main .bottom-data .orders{
-    flex-grow: 1;
-    flex-basis: 500px;
-}
-
-.content main .bottom-data .orders table{
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.content main .bottom-data .orders table th{
-    padding-bottom: 12px;
-    font-size: 13px;
-    text-align: left;
-    border-bottom: 1px solid var(--grey);
-}
-
-.content main .bottom-data .orders table td{
-    padding: 16px 0;
-}
-
-.content main .bottom-data .orders table tr td:first-child{
-    display: flex;
-    align-items: center;
-    grid-gap: 12px;
-    padding-left: 6px;
-}
-
-.content main .bottom-data .orders table td img{
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.content main .bottom-data .orders table tbody tr{
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.content main .bottom-data .orders table tbody tr:hover{
-    background: var(--grey);
-}
-
-.content main .bottom-data .orders table tr td .viewPortifolio{
-    font-size: 10px;
-    padding: 6px 16px;
-    color: var(--light);
-    border-radius: 5px;
-    font-weight: 700;
-}
-
-.content main .bottom-data .orders table tr td .viewPortifolio{
-    background: var(--primary);
-}
-
-.content main .bottom-data .orders table tr td .status.process{
-    background: var(--primary);
-}
-
-.content main .bottom-data .orders table tr td .status.pending{
-    background: var(--warning);
-}
-
-.content main .bottom-data .reminders{
-    flex-grow: 1;
-    flex-basis: 300px;
-}
-
-.content main .bottom-data .reminders .task-list{
-    width: 100%;
-}
-
-.content main .bottom-data .reminders .task-list li{
-    width: 100%;
-    margin-bottom: 16px;
-    background: var(--grey);
-    padding: 14px 10px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.content main .bottom-data .reminders .task-list li .task-title{
-    display: flex;
-    align-items: center;
-}
-
-.content main .bottom-data .reminders .task-list li .task-title p{
-    margin-left: 6px;
-}
-
-.content main .bottom-data .reminders .task-list li .bx{
-  cursor: pointer;  
-}
-
-.content main .bottom-data .reminders .task-list li.completed{
-    border-left: 10px solid var(--success);
-}
-
-.content main .bottom-data .reminders .task-list li.not-completed{
-    border-left: 10px solid var(--danger);
-}
-
-.content main .bottom-data .reminders .task-list li:last-child{
-   margin-bottom: 0;
-}
-
-/* Denuncia edition */
-
-.content main .contact-formulario{
-    width: 60%;
-    padding: 15px;
-    border:1px solid #ccc;
-    background-color: var(--light);
-    border-radius: 1rem;
-    margin-top: 25px;
-}
-.content main .contact-formulario h3{
-color: var(--primary);
-font-weight: 700;
-}
-.content main #formulario .btnenviarmensagem{
-    padding: 10px;
-    width: 20%;
-    background: var(--primary);
-    color: #fff;
-    border: none;
-    font-weight: 400;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-.content main #formulario .btnenviarmensagem:hover{
-    background: var(--color-hover);
-}
-
-.content main #formulario input{
-    height:40px;
-    width:100%;
-    outline:none;
-    border:1px solid #ccc;
-    border-radius: var(--border-radius-1);
-    padding-left:15px;
-    font-size:11pt; 
-    margin-top:  10px;
-}
-
-
-.content main #formulario input:focus,
-.content main #formulario textarea:focus,
-.content main #formulario input:valid,
-.content main #formulario textarea:valid{
-    border-color: var(--dark-grey);
-    border-bottom-width:2px;
-    transition: all 0.3s ease;
-}
-.content main #formulario textarea{
-    width:100%;
-    outline:none;
-    border:1px solid #ccc;
-    border-radius: var(--border-radius-1);
-    padding-top: 10px;
-    padding-left:15px;
-    font-size:11pt; 
-    margin-top:  10px;
-}
-.content main #formulario .form-groupo{
-    margin-top:  10px;
-}
-
-
-/* Login Layout */
-.arealogin {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #fff;
-}
 .container{
     width: 440px;
-    padding: 40px 32px;
+    padding: 23px 26px;
     border-radius: 5px;
     border:1px solid rgba(0,0,0,.2) ;
     background: #fff;
+    margin-bottom: 15px;
 }
 .container h1{
     font-size: 1.6rem;
@@ -871,7 +190,20 @@ margin-top: 30px;
  .card{
     width: 70% !important;
  }
-
+ .card .profile img{
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 8px;
+}
+.card .company{
+   padding: 10px;
+}
+.card .company label{
+    margin-left: 10px;
+    font-size: 13px;
+ }
 
 
 @media screen and (max-width: 768px) {
