--- a/src/app/mainpage/headertwo/headertwo.component.css
+++ b/src/app/mainpage/headertwo/headertwo.component.css
@@ -73,13 +73,13 @@ body{
     display: flex;
     justify-content: center;
     font-size: 1.4rem;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     color: #fff;
     background-color: var(--primary);
     border-radius: var(--border-radius-1);
 }
 .sidebar .logo .logo-name{
-    margin-left: 19px;
+    margin-left: 49px;
 }
 
 .sidebar .side-menu{
@@ -96,7 +96,7 @@ body{
     padding: 4px;
 }
 
-.sidebar .side-menu li.active{
+/* .sidebar .side-menu li.active{
     background: var(--grey);
     position: relative;
 }
@@ -123,7 +123,7 @@ body{
     right: 0;
     box-shadow: 20px -20px 0 var(--grey);
     z-index: -1;
-}
+} */
 
 .sidebar .side-menu li a{
     width: 100%;
@@ -231,6 +231,7 @@ body{
     outline: none;
     width: 100%;
     color: var(--dark);
+    font-size: 12px;
 }
 
 .content nav form .form-input button{
@@ -866,6 +867,10 @@ margin-top: 30px;
 .container .links a:hover{
     /* text-decoration: underline; */
     color: rgb(0, 69, 219);
+}
+hr{
+ background-color: red;
+
 }
 
 @media screen and (max-width: 768px) {
