--- a/src/app/mainpage/showcontract/showcontract.component.css
+++ b/src/app/mainpage/showcontract/showcontract.component.css
@@ -18,9 +18,23 @@ body{
     font-size: 13px;
     
 }
-table{
-    width: 100%;
+.viewAll ul{
+width: 100%;
 }
+.viewAll ul li{
+    display: flex;
+    align-items: center;
+   justify-content: space-between;
+   flex-direction: row;
+    }
+.viewAll ul li button{
+    display: flex;
+    align-items: end;
+   justify-content: end;
+   position: relative;
+   font-size: 12px;
+    }
+
 .modal-title{
     font-weight: 800 !important;
     color:#1976D2 !important; 
