--- a/src/app/portal/register-company/register-company.component.css
+++ b/src/app/portal/register-company/register-company.component.css
@@ -4,6 +4,7 @@
   border:1px solid rgba(0,0,0,.2) ;
   padding: 40px 32px;
   margin-top: 30px;
+  margin-bottom: 80px;
 }
 .areaRegister label{
   color: rgba(0,0,0,0.5) !important;
@@ -29,6 +30,11 @@
   box-shadow: none !important;
   border-bottom-width:2px !important;
 }
+.areaRegister select:focus{
+  box-shadow: none;
+  outline: none;
+  border: none;
+  }
 
 
 
