--- a/src/app/portal/register/register.component.html
+++ b/src/app/portal/register/register.component.html
@@ -1,98 +1,81 @@
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> 
-     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> 
+   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
 </head>
 
 <app-header></app-header>
 
 
 <div class="areaRegister container">
-    <form class="row g-3">
-        <h5>Criar conta Freelancer</h5>
-        <div class="col-md-6">
-            <label for="fullName" class="form-label">Nome completo</label>
-            <input type="text" class="form-control" name="fullName" [(ngModel)]="userFree.fullname" placeholder="Digite o nome de registo">
-          </div>
-          <div class="col-md-6">
-            <label for="numberBI" class="form-label">Número de BI</label>
-            <input type="text" class="form-control" [(ngModel)]="userFree.binumber" name="binumber" placeholder="Número de Bilhete de identidade" maxlength="14">
-          </div>
-        <div class="col-md-6">
-          <label for="phone" class="form-label">Nº de Telefone</label>
-          <input type="text" class="form-control" id="phone" [(ngModel)]="userFree.phone" name="phone" placeholder="9XXXXXXXXX" maxlength="9">
+  <form class="row g-3">
+      <h5>Criar conta Freelancer</h5>
+      <div class="col-md-6">
+          <label for="fullName" class="form-label">Nome completo</label>
+          <input type="text" class="form-control" name="fullName" [(ngModel)]="userFree.fullname" placeholder="Digite o nome de registo">
         </div>
         <div class="col-md-6">
-          <label for="userName" class="form-label">Nome de Usuário</label>
-          <input type="text" class="form-control" [(ngModel)]="userFree.username" name="username" placeholder="Coloque o seu primeiro e ultimo nome">
+          <label for="numberBI" class="form-label">Número de BI</label>
+          <input type="text" class="form-control" [(ngModel)]="userFree.binumber" name="binumber" placeholder="Número de Bilhete de identidade" maxlength="14">
+        </div>
+      <div class="col-md-6">
+        <label for="phone" class="form-label">Nº de Telefone</label>
+        <input type="text" class="form-control" id="phone" [(ngModel)]="userFree.phone" name="phone" placeholder="9XXXXXXXXX" maxlength="9">
+      </div>
+      <div class="col-md-6">
+        <label for="userName" class="form-label">Nome de Usuário</label>
+        <input type="text" class="form-control" [(ngModel)]="userFree.username" name="username" placeholder="Coloque o seu primeiro e ultimo nome">
+      </div>
+      <div class="col-md-6">
+          <label for="inputEmail4" class="form-label">Email</label>
+          <input type="email" class="form-control" [(ngModel)]="userFree.email" name="email" placeholder="Digite o seu email">
+        </div>
+      <div class="col-md-6">
+          <label for="inputPassword4" class="form-label">Password</label>
+          <input type="password" class="form-control" [(ngModel)]="userFree.password" name="password" placeholder="Digite a sua palavra-passe">
         </div>
         <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Email</label>
-            <input type="email" class="form-control" [(ngModel)]="userFree.email" name="email" placeholder="Digite o seu email">
-          </div>
-        <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Password</label>
-            <input type="password" class="form-control" [(ngModel)]="userFree.password" name="password" placeholder="Digite a sua palavra-passe">
-          </div>
-          <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Confirmar palavra-passe</label>
-            <input type="password" class="form-control"  placeholder="Digite a sua palavra-passe">
-          </div>
-        <div class="col-md-3">
-          <label for="inputCity" class="form-label">Província</label>
-          <select [(ngModel)]="userFree.id_city" name="id_city" class="form-select">
+          <label for="inputPassword4" class="form-label">Confirmar palavra-passe</label>
+          <input type="password" class="form-control"  placeholder="Digite a sua palavra-passe">
+        </div>
+      <div class="col-md-3">
+        <label for="inputCity" class="form-label">Província</label>
+         <select [(ngModel)]=" provincySelecionada" name=" provincySelecionada" class="form-select">
+          <option selected>Selecione</option>
+          <option *ngFor="let provincia of provincias" [ngValue]="provincia">{{ provincia.description }}</option>
+        </select>
+      </div>
+      <div class="col-md-3">
+          <label for="inputProfi" class="form-label">Profissão</label>
+          <select [(ngModel)]="profissaoSelecionada" name="profissaoSelecionada" class="form-select">
             <option selected>Selecione</option>
-            <option value="1">Luanda</option>
-            <option value="2">Benguela</option>
-            <option value="3">Cabinda</option>
-            <option value="4">Cunene</option>
-            <option value="5">Huambo</option>
-            <option value="6">Uige</option>
-            <option value="7">Moxico</option>
-            <option value="8">Huila</option>
-            <option value="9">Zaire</option>
-            <option value="10">Luanda Norte</option>
-            <option value="11">Lunda Sul</option>
-            <option value="12">Kuando Kubango</option>
-            <option value="13">Namibe</option>
-            <option value="14">Kwuanza Norte</option>
-            <option value="15">Kwuanza Sul</option>
-            <option value="16">Bié</option>
-            <option value="17">Malanje</option>
-            <option value="18">Bengo</option>
+        <option *ngFor="let profissao of profissoes" [ngValue]="profissao">{{ profissao.description }}</option>
           </select>
         </div>
         <div class="col-md-3">
-            <label for="inputProfi" class="form-label">Profissão</label>
-            <select [(ngModel)]="profissaoSelecionada" name="profissaoSelecionada" (change)="getSpecialtiesByProfession()"class="form-select">
-              <option selected>Selecione</option>
-          <option *ngFor="let profissao of profissoes" [ngValue]="profissao">{{ profissao.description }}</option>
-            </select>
-          </div>
-          <div class="col-md-3">
-            <label for="inputEsp" class="form-label">Especialidade</label>
-            <select id="specialtySelect" [(ngModel)]="selectedSpecialty" class="form-select">
-              <option value="" selected>Selecione</option>
-              <option *ngFor="let specialty of specialties" [value]="specialty.id">{{ specialty.description }}</option>
-            </select>
-          </div>
-          
-          
-        <div class="col-12">
-         <label for="">Genero:</label>
-          <div class="form-check">
-            <input type="radio" class="form-check-input" value="1" name="radiOption" [(ngModel)]="userFree.id_gender">
-    <label class="form-check-label" for="radiOption1">Masculino</label>
-  </div>
-  <div class="form-check">
-    <input type="radio" class="form-check-input" value="2" name="radiOption" [(ngModel)]="userFree.id_gender">
-    <label class="form-check-label"  for="radiOption2">Feminino</label>
-        </div> 
+        <label for="inputEsp" class="form-label">Especialidade</label>
+          <select [(ngModel)]="especialidadeSelecionada" name="especialidadeSelecionada" class="form-select">
+            <option selected>Selecione</option>
+            <option *ngFor="let especialidade of especialidades" [ngValue]="especialidade">{{ especialidade.description }}</option>
+          </select>
         </div>
-    
-        <div class="col-12">
-          <button type="button" (click)="salvarFree()" class="btn btn-primary btnRegister">Registrar</button>
-        </div>
-      </form>
+      <div class="col-12">
+       <label for="">Genero:</label>
+        <div class="form-check">
+          <input type="radio" class="form-check-input" value="1" name="radiOption" [(ngModel)]="userFree.id_gender">
+  <label class="form-check-label" for="radiOption1">Masculino</label>
+</div>
+<div class="form-check">
+  <input type="radio" class="form-check-input" value="2" name="radiOption" [(ngModel)]="userFree.id_gender">
+  <label class="form-check-label"  for="radiOption2">Feminino</label>
+      </div> 
+      </div>
+  
+      <div class="col-12">
+        <button type="button" (click)="salvarFree()" class="btn btn-primary btnRegister">Registrar</button>
+      </div>
+    </form>
 
 </div>
 
+
+<app-footer></app-footer>
