--- a/src/app/mainpage/backoffice/backoffice.component.html
+++ b/src/app/mainpage/backoffice/backoffice.component.html
@@ -97,15 +97,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr *ngFor="let item of usersFreelancerPublications">
                                 <td>
                                     <img src="../../../assets/img/download (1).png">
-                                    <p>Mauro Bete</p>
+                                    <p>{{ item.users_frelancer[0].user.fullname }}</p>
                                 </td>
-                                <td>14-08-2023</td>
+                                <td>{{ item.date_submit }}</td>
                                 <td><span class="viewPortifolio">Portifólio</span></td>
                             </tr>
-                            <tr>
+                            <!--<tr>
                                 <td>
                                     <img src="../../../assets/img/download (1).png">
                                     <p>Osvaldo Pedro</p>
@@ -120,7 +120,7 @@
                                 </td>
                                 <td>14-08-2023</td>
                                 <td><span class="viewPortifolio">Portifólio</span></td>
-                            </tr>
+                            </tr>-->
                         </tbody>
                     </table>
                 </div>
