--- a/src/app/mainpage/show-perfil/show-perfil.component.html
+++ b/src/app/mainpage/show-perfil/show-perfil.component.html
@@ -15,8 +15,8 @@
                         <img src="../../../assets/img/download (1).png">
                         <button class="changePhoto">edit</button>
                         <div class="nameProfission">
-                            <h5>{{ nameUser }}</h5>
-                            <h6>{{ specialitys }}</h6>
+                            <!-- <h5>{{ nameUser }}</h5> -->
+                            <!-- <h6>{{ specialitys }}</h6> -->
                             <div class="buttons">
                              <button>Enviar mensagem</button>
                              <button><a [routerLink]="['/area_de_trabalho/contrato']">Solicitar serviço</a></button>
@@ -55,8 +55,7 @@
             <div class="texto">
                 <div class="">
                     <div class="">
-                        <textarea name="description" class="form-control" rows="5"
-                        placeholder="Descreva sobre si..."></textarea>
+                        <p>.jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</p>
                     </div>
                 </div>
             </div>
