--- a/src/app/mainpage/backoffice/backoffice.component.css
+++ b/src/app/mainpage/backoffice/backoffice.component.css
@@ -627,6 +627,8 @@ body {
     color: var(--light);
     border-radius: 5px;
     font-weight: 700;
+    border: none;
+    cursor: pointer;
 }
 
 .content main .bottom-data .orders table tr td .viewPortifolio {
