--- a/src/app/mainpage/backoffice/backoffice.component.html
+++ b/src/app/mainpage/backoffice/backoffice.component.html
@@ -56,13 +56,12 @@
 
                         </div>
                         <div class="file">
-                            <button class="image" (click)="openFileInput()">
+                            <!-- <button class="image" (click)="openFileInput()">
                                 <i class='bx bx-image'></i>
                                 <input type="file" #fileInput style="display: none;" (change)="onFileSelected($event)">
-                            </button>
+                            </button> -->
                         </div>
                     </form>
-
 
                 </div>
                 <div class="aditional">
@@ -74,8 +73,6 @@
             </div>
 
             <!-- End Users Section -->
-
-
 
             <div class="bottom-data">
                 <div class="orders" *ngFor="let item of usersFreelancerPublications">
@@ -103,7 +100,9 @@
                                     <p>{{ freelancer.user.fullname }}</p>
                                 </td>
                                 <!--<td>{{ item.date_submit }}</td>-->
-                                <td><span class="viewPortifolio">Portifólio</span></td>
+                                <td>
+                                    <button type="button" class="viewPortifolio" (click)="verPerfilFreelancer(freelancer)">Portifólio</button>
+                                </td>
                             </tr>
                             <!--<tr>
                                 <td>
@@ -156,12 +155,9 @@
                         </li>
                     </ul>
                 </div>
-
                 <!-- End of Reminders-->
-
             </div>
 
         </main>
-
     </div>
 </body>
