this commit getFreelancerPerfil

--- a/src/app/mainpage/show-perfil/show-perfil.component.html
+++ b/src/app/mainpage/show-perfil/show-perfil.component.html
@@ -15,8 +15,8 @@
                         <img src="../../../assets/img/download (1).png">
                         <button class="changePhoto">edit</button>
                         <div class="nameProfission">
-                             <h5>{{ nameUser }}</h5> 
-                            <h6>{{ specialitys }}</h6> 
+                             <h5>{{ user_freelancer.fullname }}</h5> 
+                            <h6>{{ user_freelancer.especiality }}</h6> 
                             <div class="buttons">
                              <button>Enviar mensagem</button>
                              <button><a [routerLink]="['/area_de_trabalho/contrato']">Solicitar serviço</a></button>
